@@ -78,7 +78,8 @@ bottomViewDockingState = DOCKED
 createThumbs = true
 autoSaveFolder =
 autoSaveInterval = 60
-transcriptionToolbarOnTop = true
+transcriptionToolbarOnTop = false
+underlineTextStyles = true
 
 
 
