@@ -474,6 +474,7 @@ CHANGES AND BUGFIXES
 	-> iterate through table cells using arrow keys in canvas
 	-> bugfix: duplicate document possible again
 	-> bugfix: pages selector could not be opened in tools widget
+	-> "delete tags for current selection" added to transcription widget context menu
 	
 	
 	
